--- a/components/favycon-info/index.module.scss
+++ b/components/favycon-info/index.module.scss
@@ -35,10 +35,10 @@
 	left: 0;
 	z-index: 10;
 	background-color: rgba(255, 255, 255, 0.64);
+}
 
-	&.dark {
-		background-color: rgba(0, 0, 0, 0.8);
-	}
+:global(.dark-mode) .overlay {
+	background-color: rgba(0, 0, 0, 0.8);
 }
 
 .content {
